updation in the result section of js file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     
   </head>
   <body>
-    <!-- js file link -->
-    <script src="/js/script.js"></script>
+  
 
     <div class="container">
 
@@ -61,10 +60,12 @@
           <button class="button" onclick="myfunc(0)">0</button>
           <button class="button" onclick="myfunc('.')">.</button>
           <button class="button" onclick="clrcsr()">C</button>
-          <button class="button buttonspecial" onclick="result()">=</button>
+          <button class="button buttonspecial" id="equal-to-btn">=</button>
          
         </div>
       </div>
     </div>
+      <!-- js file link -->
+      <script src="/js/script.js"></script>
   </body>
 </html>
